# BioDeg-UI

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  buildWithDocker.sh  config.txt  dimension.idp  functions.idp  main.edp  parameters.idp  run.py  without_fluid.py
.github/workflows/: main.yml
BioDeg-UI/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  global.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  preprocessdialog.cpp  preprocessdialog.h  preprocessdialog.ui
BioDeg-core/: README.md
BioDeg-core/src/: geometry.idp  solver.idp
BioDeg-preprocess/: parameters.idp
core/: README.md
core/src/: adaptive.idp  export.idp  geometry.idp  interface.idp  main.edp  modules.idp  parameters.idp  save.idp  savelast.idp  solver.idp  stefan.idp  variables.idp  weak.idp
demo/: evaluation.mesh  gyroid-scaffold.mesh
doc/manual/: futurePlans.tex  installation.tex  intro.tex  manual.tex  runbiodeg.tex
doc/theory_guide/: math.tex  refs.bib  theory_guide.tex
docker/freefem/: Dockerfile
docker/freefem+qt/: Dockerfile
docker/qt/: Dockerfile
manual/: background.tex  contacts.tex  installation.tex  intro.tex  manual.tex  parameters.tex  runbiodeg.tex
paper/: paper.bib  paper.md
postprocess/: config.txt
preprocess/: dimension.idp  main.edp
src/: aboutdialog.h  aboutdialog.ui  export.idp  functions.idp  global.h  initial.idp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preprocessdialog.cpp  preprocessdialog.h  preprocessdialog.ui
tests/: check.edp  main.cpp  test_biodeg.cpp  tests.cpp  tests.h  utils.cpp  utils.h
theory_guide/: implem.tex  intro.tex  theory_guide.tex
